--- a/app/src/main/res/layout/fragment_rgb.xml
+++ b/app/src/main/res/layout/fragment_rgb.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/rgb_fragment"
     android:layout_width="match_parent"
@@ -8,7 +8,7 @@
     <View
         android:id="@+id/color_view"
         android:layout_width="match_parent"
-        android:layout_height="250dp"
+        android:layout_height="220dp"
         android:layout_marginBottom="8dp"
         android:elevation="2dp"
         app:layout_constraintBottom_toTopOf="@+id/textView_red"
@@ -82,4 +82,4 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
-</android.support.constraint.ConstraintLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
